third_party/move/move-compiler-v2/tests/more-v1/parser/vector_space_after_less.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/vector_space_after_less.move:4:29
  │
4 │         let a = vector < 100;
  │                        - ---^ Unexpected ';'
  │                        │ │
  │                        │ Expected '::' after an address in a module access chain
  │                        Perhaps you need a blank space before this '<' operator?
