third_party/move/move-compiler-v2/tests/more-v1/parser/vector_space_after_less.move
module 0x42::Test {
    fun t() {
        // tests there being a space after <
        let a = vector < 100;
    }
}
